--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "googleapis": "^39.2.0",
     "mongoose": "^6.5.0",
     "mysql2": "^2.3.3",
+    "radium": "^0.26.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
