--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^9.0.0",
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
+    "ajv": "^8.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "googleapis": "^105.0.0",
