--- a/package.json
+++ b/package.json
@@ -33,13 +33,20 @@
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "ajv": "^8.11.0",
+    "bl": "^5.0.0",
+    "bson": "^4.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "denque": "^2.1.0",
     "googleapis": "^105.0.0",
+    "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
     "mysql2": "^2.3.3",
+    "optional-require": "^1.1.8",
     "radium": "^0.26.2",
+    "react": "^18.2.0",
     "reflect-metadata": "^0.1.13",
+    "require-at": "^1.0.6",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.7"
