--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.ts",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -42,11 +42,9 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
     "mysql2": "^2.3.3",
-    "optional-require": "^1.1.8",
     "radium": "^0.26.2",
     "react": "^18.2.0",
     "reflect-metadata": "^0.1.13",
-    "require-at": "^1.0.6",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.7"
