--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "ajv": "^8.11.0",
+    "aws-sdk": "^2.1214.0",
     "bl": "^5.0.0",
     "bson": "^4.6.5",
     "class-transformer": "^0.5.1",
